--- a/app/less/contactUs.less
+++ b/app/less/contactUs.less
@@ -56,7 +56,7 @@
         }
     }
     .modal{
-        margin: 120px;
+        margin-top: 120px;
     }
     .modal-body{
         // background: red;
